[tool.poetry]
name = "async-chat"
version = "0.1.0"
description = ""
authors = ["Alexander Lebedev"]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
